modificari jacobi